# qq-ero-bot

./: .gitignore  README.md  config.py  cut.py  gpt_text.py  main.py  main_base.py  pyproject.toml  requirements.txt  test.py
modules/: chatgpt.py  coc.py  formatter.py  news_text.py  random_image_provide.py  simple_text_reply.py  summary.py
persistance/: gpt_limit.py
persistence/: gpt_limit.py
persistence/data/: gpt_limit.json
